--- a/subgraphs/stablejoe/package.json
+++ b/subgraphs/stablejoe/package.json
@@ -1,18 +1,23 @@
 {
   "name": "StableJoeStaking",
+  "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
     "prepare:avax": "mustache config/avax.json stablejoe.template.yaml > stablejoe.avax.yaml",
     "prepare:rinkeby": "mustache config/rinkeby.json stablejoe.template.yaml > stablejoe.rinkeby.yaml",
+    "prepare:fuji": "mustache config/fuji.json stablejoe.template.yaml > stablejoe.fuji.yaml",
     "codegen:avax": "graph codegen stablejoe.avax.yaml",
     "codegen:rinkeby": "graph codegen stablejoe.rinkeby.yaml",
+    "codegen:fuji": "graph codegen stablejoe.fuji.yaml",
     "build:avax": "graph build stablejoe.avax.yaml",
     "build:rinkeby": "graph build stablejoe.rinkeby.yaml",
+    "build:fuji": "graph build stablejoe.fuji.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe stablejoe.avax.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-rinkeby stablejoe.rinkeby.yaml",
-    "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/stablejoe --access-token ",
-    "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/stablejoe --access-token ",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 --access-token traderjoe-xyz/sjoe stablejoe.fuji.yaml"
+    "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-fuji stablejoe.fuji.yaml",
+    "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/sjoe-fuji",
+    "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/sjoe-fuji",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/sjoe-fuji stablejoe.fuji.yaml"
   },
   "dependencies": {}
 }
