--- a/subgraphs/stablejoe/stablejoe.template.yaml
+++ b/subgraphs/stablejoe/stablejoe.template.yaml
@@ -21,9 +21,9 @@ dataSources:
         - StableJoeDayData
       abis:
         - name: StableJoeStaking
-          file: ../../node_modules/@traderjoe-xyz/core/abi/StableJoeStaking.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/StableJoeStaking.json
         - name: Pair
-          file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
         - event: ClaimReward(indexed address,indexed address,uint256)
           handler: handleClaimReward
