--- a/subgraphs/bar/bar.template.yaml
+++ b/subgraphs/bar/bar.template.yaml
@@ -20,11 +20,11 @@ dataSources:
         - User
       abis:
         - name: Bar
-          file: ../../node_modules/@traderjoe-xyz/core/abi/JoeBar.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoeBar.json
         - name: JoeToken
-          file: ../../node_modules/@traderjoe-xyz/core/abi/JoeToken.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoeToken.json
         - name: Pair
-          file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: transfer
