--- a/subgraphs/dexcandles/dexcandles.template.yaml
+++ b/subgraphs/dexcandles/dexcandles.template.yaml
@@ -26,7 +26,7 @@ dataSources:
         - Pair
       abis:
         - name: Factory
-          file: ../../node_modules/@traderjoe-xyz/core//abi/JoeFactory.json
+          file: ./node_modules/@traderjoe-xyz/core//abi/JoeFactory.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handleNewPair
@@ -45,9 +45,9 @@ templates:
         - Pair
       abis:
         - name: Pair
-          file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoePair.json
         - name: ERC20
-          file: ../../node_modules/@traderjoe-xyz/core/abi/ERC20.json
+          file: ./node_modules/@traderjoe-xyz/core/abi/ERC20.json
       eventHandlers:
         - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
           handler: handleSwap
