--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -23,5 +23,8 @@
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/exchange-fuji exchange.fuji.yaml"
+  },
+  "dependencies": {
+    "@traderjoe-xyz/core": "^2.3.0"
   }
 }
