--- a/subgraphs/masterchefV2/package.json
+++ b/subgraphs/masterchefV2/package.json
@@ -21,5 +21,7 @@
         "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/masterchefV2",
         "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/masterchefV2 masterchefV2.fuji.yaml"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@traderjoe-xyz/core": "^2.3.0"
+    }
 }
