--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -10,6 +10,7 @@
     "build": ".",
     "prepare:avax": "mustache config/avax.json index.template.ts > index.ts",
     "prepare:rinkeby": "mustache config/rinkeby.json index.template.ts > index.ts",
-    "prepare:fuji": "mustache config/fuji.json index.template.ts > index.ts"
+    "prepare:fuji": "mustache config/fuji.json index.template.ts > index.ts",
+    "prepare:arbgoerli": "mustache config/arbgoerli.json index.template.ts > index.ts"
   }
 }
