--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -11,15 +11,19 @@
     "prepare:avax": "mustache config/avax.json exchange.template.yaml > exchange.avax.yaml",
     "prepare:rinkeby": "mustache config/rinkeby.json exchange.template.yaml > exchange.rinkeby.yaml",
     "prepare:fuji": "mustache config/fuji.json exchange.template.yaml > exchange.fuji.yaml",
+    "prepare:arbgoerli": "mustache config/arbgoerli.json exchange.template.yaml > exchange.arbgoerli.yaml",
     "codegen:avax": "graph codegen exchange.avax.yaml",
     "codegen:rinkeby": "graph codegen exchange.rinkeby.yaml",
     "codegen:fuji": "graph codegen exchange.fuji.yaml",
+    "codegen:arbgoerli": "graph codegen exchange.arbgoerli.yaml",
     "build:avax": "graph build exchange.avax.yaml",
     "build:rinkeby": "graph build exchange.rinkeby.yaml",
     "build:fuji": "graph build exchange.fuji.yaml",
+    "build:arbgoerli": "graph build exchange.arbgoerli.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/exchange exchange.avax.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/exchange-rinkeby-ii exchange.rinkeby.yaml",
     "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/exchange-fuji exchange.fuji.yaml",
+    "deploy:arbgoerli": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/joe-v1-arb-goerli exchange.arbgoerli.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/exchange-fuji exchange.fuji.yaml"
