--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -11,6 +11,7 @@
     "prepare:avax": "mustache config/avax.json index.template.ts > index.ts",
     "prepare:rinkeby": "mustache config/rinkeby.json index.template.ts > index.ts",
     "prepare:fuji": "mustache config/fuji.json index.template.ts > index.ts",
-    "prepare:arbgoerli": "mustache config/arbgoerli.json index.template.ts > index.ts"
+    "prepare:arbgoerli": "mustache config/arbgoerli.json index.template.ts > index.ts",
+    "prepare:arbitrum": "mustache config/arbitrum.json index.template.ts > index.ts"
   }
 }
