--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -27,7 +27,7 @@
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/exchange-rinkeby-ii exchange.rinkeby.yaml",
     "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/exchange-fuji exchange.fuji.yaml",
     "deploy:arbgoerli": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/joe-v1-arb-goerli exchange.arbgoerli.yaml",
-    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/joe-v1-arbitrum exchange.arbitrum.yaml --access-token 8948fe26a7f94daca75fd7c62b6319fb",
+    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/joe-v1-arbitrum exchange.arbitrum.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/exchange-fuji",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/exchange-fuji exchange.fuji.yaml"
