--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -12,6 +12,7 @@
     "prepare:rinkeby": "mustache config/rinkeby.json index.template.ts > index.ts",
     "prepare:fuji": "mustache config/fuji.json index.template.ts > index.ts",
     "prepare:arbgoerli": "mustache config/arbgoerli.json index.template.ts > index.ts",
-    "prepare:arbitrum": "mustache config/arbitrum.json index.template.ts > index.ts"
+    "prepare:arbitrum": "mustache config/arbitrum.json index.template.ts > index.ts",
+    "prepare:bsc": "mustache config/bsc.json index.template.ts > index.ts"
   }
 }
