--- a/subgraphs/feeConverter/feeConverter.avax.yaml
+++ b/subgraphs/feeConverter/feeConverter.avax.yaml
@@ -7,22 +7,27 @@ dataSources:
     name: FeeConverter
     network: avalanche
     source:
-      address: '0x363853dc997bD8276BbBf79E6CFCeD91f6B420BF'
+      address: '0x60233142BefcE7D4ed73e7793eaD2d6190fccAAB'
       abi: FeeConverter
-      startBlock: 27109170
+      startBlock: 29178804
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ./src/mappings/feeConverter.ts
+      file: ./src/mappings/feeBank.ts
       entities:
-        - FeeConverter
-        - Remit
+        - FeeBank
+        - Swap
+        - DayData
       abis:
         - name: FeeConverter
           file: ./abi/FeeConverter.json
         - name: ERC20
           file: ./node_modules/@traderjoe-xyz/core/abi/ERC20.json
+        - name: Factory
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
+        - name: Pair
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
-        - event: Swap(indexed address,indexed address,uint256,uint256)
+        - event: Swap(address,indexed address,indexed address,uint256,uint256)
           handler: handleSwap
