--- a/subgraphs/feeConverter/feeConverter.template.yaml
+++ b/subgraphs/feeConverter/feeConverter.template.yaml
@@ -14,15 +14,20 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ./src/mappings/feeConverter.ts
+      file: ./src/mappings/feeBank.ts
       entities:
-        - FeeConverter
-        - Remit
+        - FeeBank
+        - Swap
+        - DayData
       abis:
         - name: FeeConverter
           file: ./abi/FeeConverter.json
         - name: ERC20
           file: ./node_modules/@traderjoe-xyz/core/abi/ERC20.json
+        - name: Factory
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
+        - name: Pair
+          file: ./node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
-        - event: Swap(indexed address,indexed address,uint256,uint256)
+        - event: Swap(address,indexed address,indexed address,uint256,uint256)
           handler: handleSwap
