--- a/subgraphs/feeBank/feeBank.template.yaml
+++ b/subgraphs/feeBank/feeBank.template.yaml
@@ -1,15 +1,15 @@
-specVersion: 0.0.2
-description: FeeConverter
+specVersion: 0.0.1
+description: FeeBank
 schema:
-  file: ./feeConverter.graphql
+  file: ./feeBank.graphql
 dataSources:
   - kind: ethereum/contract
     name: FeeConverter
-    network: avalanche
+    network: {{ network }}
     source:
-      address: '0x60233142BefcE7D4ed73e7793eaD2d6190fccAAB'
+      address: '{{ address }}'
       abi: FeeConverter
-      startBlock: 29178804
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
