add sjoe subgraph config for arbitrum

--- a/subgraphs/stablejoe/package.json
+++ b/subgraphs/stablejoe/package.json
@@ -4,15 +4,19 @@
   "license": "UNLICENSED",
   "scripts": {
     "prepare:avax": "mustache config/avax.json stablejoe.template.yaml > stablejoe.avax.yaml",
+    "prepare:arbitrum": "mustache config/arbitrum.json stablejoe.template.yaml > stablejoe.arbitrum.yaml",
     "prepare:rinkeby": "mustache config/rinkeby.json stablejoe.template.yaml > stablejoe.rinkeby.yaml",
     "prepare:fuji": "mustache config/fuji.json stablejoe.template.yaml > stablejoe.fuji.yaml",
     "codegen:avax": "graph codegen stablejoe.avax.yaml",
+    "codegen:arbitrum": "graph codegen stablejoe.arbitrum.yaml",
     "codegen:rinkeby": "graph codegen stablejoe.rinkeby.yaml",
     "codegen:fuji": "graph codegen stablejoe.fuji.yaml",
     "build:avax": "graph build stablejoe.avax.yaml",
+    "build:arbitrum": "graph build stablejoe.arbitrum.yaml",
     "build:rinkeby": "graph build stablejoe.rinkeby.yaml",
     "build:fuji": "graph build stablejoe.fuji.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe stablejoe.avax.yaml",
+    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-arbitrum stablejoe.arbitrum.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-rinkeby stablejoe.rinkeby.yaml",
     "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-fuji stablejoe.fuji.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/sjoe-fuji",
