--- a/subgraphs/feeBank/package.json
+++ b/subgraphs/feeBank/package.json
@@ -8,6 +8,10 @@
     "codegen:avax": "graph codegen feeBank.avax.yaml",
     "build:avax": "graph build feeBank.avax.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/fee-collector-avax feeBank.avax.yaml",
+    "prepare:arbitrum": "mustache config/arbitrum.json feeBank.template.yaml > feeBank.arbitrum.yaml",
+    "codegen:arbitrum": "graph codegen feeBank.arbitrum.yaml",
+    "build:arbitrum": "graph build feeBank.arbitrum.yaml",
+    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/fee-collector-arbitrum feeBank.arbitrum.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/fee-collector-avax",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/fee-collector-avax",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001  traderjoe-xyz/fee-collector-avax feeBank.avax.yaml"
